Build with Java 18 (latest bazel is broken though)